[package]
name = "advent-of-code-2019"
version = "0.1.0"
authors = ["Ninjani"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.25"
itertools = "0.8.2"
num = "0.2.0"
num-derive = "0.3.0"
num-traits = "0.2.10"
